# demo_flask_k8s

./: Dockerfile  Makefile  README.md  config.py  main.py  pyproject.toml  requirements.txt  skaffold.yaml
.github/workflows/: docker-image.yml
k8s/: flask_deployment.yaml  flask_ingress.yaml  flask_service.yaml  namespace.yaml  postgres-deployment.yaml  postgres-pvc.yaml  postgres-secret.yaml  postgres-service.yaml
k8s/base/: flask_deployment.yaml  flask_hpa.yaml  flask_ingress.yaml  flask_service.yaml  kustomization.yaml  postgres-deployment.yaml  postgres-pvc.yaml  postgres-secret.yaml  postgres-service.yaml
k8s/k3s/: registry.yaml
k8s/k3s/local_registry_cache/: scheduler-state.json
k8s/k3s/local_registry_cache/docker/registry/v2/blobs/sha256/06/0626c6149c90dfe629bb8391412a8430a37e8f5696ec44c3356c8b7bc6c1c88e/: data
k8s/k3s/local_registry_cache/docker/registry/v2/blobs/sha256/0b/0b0af2baa827c1a3afb35f881eb264c5b8483ad834bae3eb7882b72ebf434a07/: data
k8s/k3s/local_registry_cache/docker/registry/v2/blobs/sha256/14/148c19256271909650fb514430c86606775bedaafc30e9fb6af6faad5adf1086/: data
k8s/overlays/local/: kustomization.yaml
k8s/overlays/local/tools/: pgadmin.yaml
k8s/overlays/prod/: config.properties  flask-hpa-prod.yaml  kustomization.yaml
k8s/overlays/staging/: flask-hpa-staging.yaml  kustomization.yaml
k8s/overlays/tgu/: kustomization.yaml
k8s/prod/: kustomization.yaml
k8s/staging/: kustomization.yaml
todo_list/: __init__.py  database.py
todo_list/static/: custom.css
todo_list/templates/: index.html
(+85 files in other folders)
